<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    tools:context=".activity.LoginActivity">

    <TextView
        style="@style/text_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/gap_15dp"
        android:text="@string/login"
        app:layout_constraintBottom_toTopOf="@id/login_email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@id/login_email" />

    <EditText
        android:id="@+id/login_email"
        style="@style/text_usual"
        android:layout_width="@dimen/ed_t_260dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/gap_5dp"
        android:background="@drawable/bg_edit_text"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textSize="@dimen/ts_16sp"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/login_pass"
        style="@style/text_usual"
        android:layout_width="@dimen/ed_t_260dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/gap_5dp"
        android:background="@drawable/bg_edit_text"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="@dimen/ts_16sp"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline" />

    <TextView
        android:id="@+id/error_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/gap_5dp"
        android:layout_marginBottom="@dimen/gap_5dp"
        android:maxWidth="@dimen/ed_t_260dp"
        android:text="@string/wrong_pass_or_email"
        android:textColor="@color/red"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="@id/login_pass"
        app:layout_constraintTop_toBottomOf="@id/login_pass" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="@dimen/w_100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/gap_10dp"
        android:text="@string/login"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@id/login_pass"
        app:layout_constraintTop_toBottomOf="@+id/error_message" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <ProgressBar
        android:id="@+id/login_progress_bar"
        android:layout_width="@dimen/w_50dp"
        android:layout_height="@dimen/w_50dp"
        android:elevation="@dimen/w_100dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>